// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Modal will rendered with passing a descripotio 1`] = `
<div
  class="lk-modal"
>
  <div
    class="lk-modal--container"
  >
    <div
      aria-hidden="true"
      class="lk-modal--overlay"
    >
      <div
        class="lk-modal--overlay-bg"
      />
    </div>
    <span
      class="hidden sm:inline-block sm:align-middle sm:h-screen"
    >
      ​
    </span>
    <div
      class="lk-modal--body fade-slide-enter-from fade-slide-enter-active"
      role="dialog"
    >
      <div
        class="lk-modal--panel"
      >
        <div
          class="lk-modal--panel-content"
        >
          <h3
            class="content-header"
          >
            
            
            
          </h3>
          <div
            class="content-desc"
          >
            
            This is a description of modal
            
          </div>
        </div>
      </div>
      <div
        class="lk-modal--footer"
      >
        <button
          class="lk-button lk-button--success lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              Yes
              
            </div>
          </div>
        </button>
        <button
          class="lk-button lk-button--danger lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              No
              
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`common/Modal will rendered with passing title 1`] = `
<div
  class="lk-modal"
>
  <div
    class="lk-modal--container"
  >
    <div
      aria-hidden="true"
      class="lk-modal--overlay"
    >
      <div
        class="lk-modal--overlay-bg"
      />
    </div>
    <span
      class="hidden sm:inline-block sm:align-middle sm:h-screen"
    >
      ​
    </span>
    <div
      class="lk-modal--body fade-slide-enter-from fade-slide-enter-active"
      role="dialog"
    >
      <div
        class="lk-modal--panel"
      >
        <div
          class="lk-modal--panel-content"
        >
          <h3
            class="content-header"
          >
            
            This is title
            
          </h3>
          <div
            class="content-desc"
          >
            
            
            
          </div>
        </div>
      </div>
      <div
        class="lk-modal--footer"
      >
        <button
          class="lk-button lk-button--success lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              Yes
              
            </div>
          </div>
        </button>
        <button
          class="lk-button lk-button--danger lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              No
              
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`common/Modal will rendered with snapshot 1`] = `
<div
  class="lk-modal"
>
  <div
    class="lk-modal--container"
  >
    <div
      aria-hidden="true"
      class="lk-modal--overlay"
    >
      <div
        class="lk-modal--overlay-bg"
      />
    </div>
    <span
      class="hidden sm:inline-block sm:align-middle sm:h-screen"
    >
      ​
    </span>
    <div
      class="lk-modal--body fade-slide-enter-from fade-slide-enter-active"
      role="dialog"
    >
      <div
        class="lk-modal--panel"
      >
        <div
          class="lk-modal--panel-content"
        >
          <h3
            class="content-header"
          >
            
            
            
          </h3>
          <div
            class="content-desc"
          >
            
            
            
          </div>
        </div>
      </div>
      <div
        class="lk-modal--footer"
      >
        <button
          class="lk-button lk-button--success lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              Yes
              
            </div>
          </div>
        </button>
        <button
          class="lk-button lk-button--danger lk-button--base text-bold"
        >
          <div
            class="lk-button--wrapper"
          >
            <div
              class="lk-button--icon"
            >
              <svg
                class=""
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="lk-button--label has-icon"
            >
              
              No
              
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
